[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "websub-print-listener"
authors = [
  { name="OpenG2P", email="info@openg2p.org" },
]
description = ""
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: Mozilla Public License 2.0 (MPL 2.0)",
  "Operating System :: OS Independent",
]
dependencies = [
  "openg2p-fastapi-common",
  "jinja2",
  "pdfkit",
]
dynamic = ["version"]

[project.urls]
Homepage = "https://openg2p.org"
Documentation = "https://docs.openg2p.org/"
Repository = "https://github.com/OpenG2P/websub-print-listener"
Source = "https://github.com/OpenG2P/websub-print-listener"

[tool.hatch.version]
path = "src/websub_print_listener/__init__.py"
